[FIX] Fixing deprecated navigation hook from router dom lib

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
     background-color: aqua;
     width: 100%;
     margin: 0;
-    padding: 10px;  // Adicione um preenchimento desejado
+    padding: 10px; 
     box-sizing: border-box;
   }
   
