:penguin: Add Dialog Task

--- a/src/pages/AdminPage/AdminPage.scss
+++ b/src/pages/AdminPage/AdminPage.scss
@@ -72,3 +72,6 @@
     margin-top: 30px; // Aumenta a margem superior das seções de participantes e squads
   }
 }
+.form-group {
+  margin-top: 1em; 
+}
