--- a/src/pages/AdminPage/AdminPage.scss
+++ b/src/pages/AdminPage/AdminPage.scss
@@ -75,3 +75,21 @@
 .form-group {
   margin-top: 1em; 
 }
+.card-actions {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+}
+.card-buttons {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: -50px;
+  right: -20px;
+}
+
+.card-buttons button{
+  background: none;
+border: none;
+}
+
